--- a/app/src/main/res/layout/activity_section_c1.xml
+++ b/app/src/main/res/layout/activity_section_c1.xml
@@ -155,7 +155,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:layout_weight="1"
-                        android:text="@string/yes" />
+                        android:text="@string/alive" />
 
                     <RadioButton
                         android:id="@+id/kc102b"
@@ -163,7 +163,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:layout_weight="1"
-                        android:text="@string/no" />
+                        android:text="@string/died" />
 
                 </RadioGroup>
 
@@ -236,7 +236,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:layout_weight="1"
-                        android:text="@string/yes" />
+                        android:text="@string/alive" />
 
                     <RadioButton
                         android:id="@+id/kc102btwin"
@@ -244,7 +244,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:layout_weight="1"
-                        android:text="@string/no" />
+                        android:text="@string/died" />
 
                 </RadioGroup>
 
